projects/tests/tests/performance/memory.txt
/home/eric/T&eacute;l&eacute;chargements/DVWA-master/external/phpids/0.6/lib/IDS/vendors/htmlpurifier/HTMLPurifier.includes.php
/srv/www/htdocs/phpMyAdmin/prefs_manage.php
/srv/www/htdocs/phpMyAdmin/db_central_columns.php

Time & defs (computekill):
/srv/www/htdocs/phpMyAdmin/vendor/tecnickcom/tcpdf/fonts/dejavusans.php

/srv/www/htdocs/phpMyAdmin/ (without hardrules) :
real    11m55,636s
user    10m30,884s
sys     0m1,153s

/srv/www/htdocs/phpMyAdmin/ (with hardrules) :
real    13m1,293s
user    11m12,556s
sys     0m1,254s

/srv/www/htdocs/phpMyAdmin/ (07/07/2018 : 3000 defs & 500ko) :
real    10m20,371s
user    9m57,704s
sys     0m1,577s


good test, a lot of defs and includes :
/home/eric/dev/scripts/drupal/core/includes/install.core.inc

exhausted memory good test:
/srv/www/htdocs/phpMyAdmin/libraries/DisplayResults.php 
/srv/www/htdocs/phpMyAdmin/vendor/tecnickcom/tcpdf/tcpdf.php

drupal last version (0.3.1) :
real    10m50,612s
user    7m54,834s
sys     0m3,183s

/srv/www/htdocs/phpMyAdmin/ (0.3.2) :
real    17m24,932s
user    13m48,302s
sys     0m3,614s

drupal last version  (0.3.2) :
real    10m29,448s
user    6m55,317s
sys     0m2,826s

good test nikic :
/home/eric/dev/perso/designsecurity/progpilot/.git/
PHP Fatal error:  Allowed memory size of 536870912 bytes exhausted (tried to allocate 20480 bytes) in /home/eric/dev/perso/designsecurity/progpilot/projects/example_config/vendor/nikic/php-parser/lib/PhpParser/Parser/Php5.php on line 2237

